# real_server_bot

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  prog_args.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  tier_state.rs  types.rs
crates/data_entry_cli/: Cargo.toml
crates/data_entry_cli/src/: interactive.rs  main.rs  prog_args.rs  report_gen.rs  types.rs  utils.rs
crates/db/: .env  Cargo.toml  diesel.toml
crates/db/migrations/2025-09-06-225548_init/: down.sql  up.sql
crates/db/migrations/2025-09-06-232100_init/: down.sql  up.sql
crates/db/migrations/2025-09-07-021219_small_update/: down.sql  up.sql
crates/db/src/: db.rs  fs_match_db.rs  kv_match_db.rs  lib.rs  model.rs  schema.rs
crates/discord_scraper/: Cargo.toml
crates/discord_scraper/src/: game_msg_parser.rs  lib.rs
