[workspace]

members = [
    "crates/common",
    "crates/cli",
    "crates/db",
    "crates/discord_scraper",
    "crates/data_entry_cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["bgluth <gluthb@gmail.com>"]
license = "MIT/Apache-2.0"

[workspace.dependencies]
