[package]
name = "data_entry_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
dateparser = "0.2.1"
log = "0.4.27"
reals_server_bot_discord_scraper = { path = "../discord_scraper" }
