[package]
name = "reals_server_bot_discord_scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reals_server_bot_common = { path = "../common" }
serenity = "0.12.4"
tokio = { version = "1.45.1", features = ["parking_lot", "rt", "rt-multi-thread"] }
